--- a/testoct29.html
+++ b/testoct29.html
@@ -680,7 +680,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
     <h2>Import Players</h2>
 
     <label for="playerData">Paste or type player names:</label>
-    <textarea id="playerData" rows="5" placeholder=="Name,Gender&#10;Kari,Male&#10;Bhavani,Female"></textarea>
+    <textarea id="players-textarea" rows="5" placeholder=="Name,Gender&#10;Kari,Male&#10;Bhavani,Female"></textarea>
 
     <!-- 🎯 Gender Selection (clean & aligned) -->
     <div class="gender-row">
