--- a/testoct29.html
+++ b/testoct29.html
@@ -680,7 +680,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
     <h2>Import Players</h2>
 
     <label for="playerData">Paste or type player names:</label>
-    <textarea id="players-textarea" rows="5" placeholder=="Name,Gender&#10;Kari,Male&#10;Bhavani,Female"></textarea>
+    <textarea id="players-textarea" rows="15" placeholder=="Name,Gender&#10;Kari,Male&#10;Bhavani,Female"></textarea>
 
     <!-- 🎯 Gender Selection (clean & aligned) -->
     <div class="gender-row">
@@ -746,14 +746,13 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
         </div>
 
-        <!-- Go to Rounds -->
-<div class="main-buttons">
+         <div class="card">
+
+            <h3>Rounds</h3>
   <button id="newBtn" class="main-action new" onclick="startNew()">🆕 New</button>
-  <span class="main-label">Go to Rounds</span>
   <button id="continueBtn" class="main-action continue" onclick="goToRounds()">➡️ Continue</button>
 </div>
         
-    </div>
 
 </div>
 
