--- a/testalpha1.html
+++ b/testalpha1.html
@@ -11,6 +11,10 @@
 
 <title>Badminton Pair-UP</title>
 
+
+
+
+
 <style>
 
 body {
@@ -19,7 +23,7 @@ body {
 
     font-family: Arial, sans-serif;
 
-    background: linear-gradient(135deg, #3b0073, #7d00b8);
+    background: #3b0073;
 
     color: white;
 
@@ -29,11 +33,9 @@ body {
 
 }
 
-header { padding: 8px; }
+ 
 
-h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
-
-.container { max-width: 800px; margin: auto; padding: 8px; }
+.container { margin: auto; padding: 8px; }
 
 .card,
 
@@ -43,51 +45,21 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
     color: black;
 
-    padding: 12px;
-
-    margin-bottom: 8px;
-
-    border-radius: 12px;
-
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-
-    width: 550px;
-
-    max-width: 95vw;
-
-    box-sizing: border-box;
-
-}
-
-.rest-box {
-
-    background: transparent !important;
-
-    color: black;
-
     padding: 8px;
 
-    margin-bottom: 6px;
+    margin: 8px;
 
     border-radius: 12px;
 
-    width: 550px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); 
 
     max-width: 95vw;
 
     box-sizing: border-box;
 
-    display: flex;
-
-    flex-wrap: wrap;
-
-    justify-content: center;
-
-    align-items: center;
-
-    gap: 6px;
-
 }
+
+ 
 
 .card input,
 
@@ -99,13 +71,15 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
     padding: 8px;
 
-    margin: 8px 0;
+    margin: 5px 0;
 
-    font-size: 16px;
+    font-size: 14px;
 
     border-radius: 6px;
 
     box-sizing: border-box;
+
+ 
 
 }
 
@@ -129,188 +103,27 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
-.card button:hover {
-
-    background: #5e009c;
-
-    transform: scale(1.05);
-
-}
-
-#player-list-table {
-
-    width: 100%;
-
-    border-collapse: collapse;
-
-    margin-top: 2px;
-
-}
-
-#player-list-table th, #player-list-table td {
-
-    border: 1px solid #ccc;
-
-    padding: 6px;
-
-    text-align: center;
-
-    font-size: 14px;
-
-}
-
-#player-list-table th { background: #f2f2f2; }
-
-.delete-btn {
-
-    background: none;
-
-    border: none;
-
-    color: #d11a2a;
-
-    font-size: 8px;
-
-    cursor: pointer;
-
-}
-
-.delete-btn:hover { color: #a00; }
-
-.fixed-pairs-list { margin-top: 8px; }
-
-.fixed-pair-item {
-
-    background: #eee;
-
-    color: black;
-
-    padding: 6px 8px;
-
-    border-radius: 6px;
-
-    margin: 5px 0;
+.card-col {
 
     display: flex;
 
-    justify-content: space-between;
+    flex-direction: row;
 
     align-items: center;
 
-}
+    gap: 8px;
 
-.fixed-pair-remove {
+    padding: 8x;
 
-    color: #d11a2a;
+    background: white;
 
-    cursor: pointer;
+   
 
-    margin-left: 8px;
-
-}
-
-.fixed-pair-remove:hover { color: #a00; }
-
-#importModal {
-  display: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100vw; height: 100vh;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 1000;
-  font-size: 22px; /* ⬆️ slightly larger overall text */
-}
-
-#importModal .modal-content {
-  background: white;
-  color: black;
-  max-width: 500px; /* ⬆️ a bit wider for larger text */
-  margin: 100px auto;
-  padding: 24px; /* ⬆️ extra padding for balance */
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 22px; /* ⬆️ ensure all inner text inherits */
-}
-
-#importModal textarea {
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 18px;
-  padding: 10px 12px; /* ⬆️ more space inside */
-  border-radius: 8px;
-  resize: vertical;
-  font-size: 20px; /* ⬆️ bigger typing area text */
-}
-
-.modal-buttons {
-  display: flex;
-  justify-content: flex-end;
-  gap: 12px;
-}
-
-.ok-btn,
-.cancel-btn {
-  font-size: 18px; /* ⬆️ larger button text */
-  font-weight: bold;
-  cursor: pointer;
-  padding: 10px 16px; /* ⬆️ larger click area */
-  border-radius: 8px;
-  border: none;
-  color: white;
-}
-
-.ok-btn {
-  background: #009c3c;
-}
-.ok-btn:hover {
-  background: #00b84d;
-}
-
-.cancel-btn {
-  background: #d11a2a;
-}
-.cancel-btn:hover {
-  background: #ff3b3b;
-}
-
-
-.main-action {
-
-    display: block;
-
-    width: 100%;
-
-    background: orange;
-
-    color: black;
-
-    font-size: 20px;
-
-    font-weight: bold;
-
-    padding: 8px;
-
-    border-radius: 8px;
-
-    margin-top: 8px;
-
-    cursor: pointer;
-
-    border: none;
-
-    transition: background 0.3s, transform 0.2s;
+ 
 
 }
 
-.main-action:hover {
-
-    background: #ffb84d;
-
-    transform: scale(1.05);
-
-}
+ 
 
 #game-results {
 
@@ -330,7 +143,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
-.match-card h3 { font-size: 22px; margin: 0; }
+ 
 
 .match-card .teams {
 
@@ -344,6 +157,8 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
+ 
+
 .team {
 
     display: flex;
@@ -356,19 +171,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
-.vs-text {
-
-    font-size: 20px;
-
-    font-weight: bold;
-
-    color: #3b0073;
-
-    flex: 0 0 auto;
-
-    margin: 0 8px;
-
-}
+ 
 
 .Lplayer-btn, .Rplayer-btn {
 
@@ -392,15 +195,19 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
-.Lplayer-btn { background: #009c3c; }
+ 
 
-.Rplayer-btn { background: #0494ad; }
+.Lplayer-btn { background: #009c3c; }
 
 .Lplayer-btn:hover { background: #34995b; transform: scale(1.03); }
 
+ 
+
+.Rplayer-btn { background: #0494ad; }
+
 .Rplayer-btn:hover { background: #3f8e9c; transform: scale(1.03); }
 
-.match-time { font-size: 16px; color: #3b0073; font-weight: 600; margin-top: 4px; }
+ 
 
 .round-navigation {
 
@@ -416,13 +223,17 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
     padding: 8px 16px;
 
-    background: linear-gradient(135deg, #2a2a72, #009ffd);
+    background:  #009ffd;
 
     border-radius: 12px;
 
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
 
+ 
+
 }
+
+ 
 
 .round-navigation .round-label {
 
@@ -435,6 +246,8 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 
 }
+
+ 
 
 .round-navigation button {
 
@@ -458,6 +271,8 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
+ 
+
 .round-navigation button:hover:enabled {
 
     background: #009ffd;
@@ -470,6 +285,8 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
+ 
+
 .round-navigation button:disabled {
 
     opacity: 0.5;
@@ -477,6 +294,38 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
     cursor: not-allowed;
 
 }
+
+ 
+
+.rest-box {
+
+    background: transparent !important;
+
+    color: black;
+
+    padding: 8px;
+
+    margin-bottom: 6px;
+
+    border-radius: 12px; 
+
+              max-width: 95vw;
+
+    box-sizing: border-box;
+
+    display: flex;
+
+    flex-wrap: wrap;
+
+    justify-content: center;
+
+    align-items: center;
+
+    gap: 6px;
+
+}
+
+ 
 
 .rest-btn {
 
@@ -496,7 +345,11 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
     transition: transform 0.2s, background 0.2s;
 
+ 
+
 }
+
+ 
 
 .rest-btn:hover {
 
@@ -506,84 +359,232 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
-.rest-box.drag-over { outline: 3px dashed #ff9800; }
+ 
 
-.rest-box:empty { min-height: 40px; }
+#importModal {
 
-.round-title {
+  display: none;
 
-    display: inline-block;
+  position: fixed;
 
-    background: #007BFF;
+  top: 0; left: 0;
 
-    color: white;
+  width: 100vw; height: 100vh;
 
-    padding: 8px 20px;
+  background: rgba(0, 0, 0, 0.6);
 
-    border-radius: 14px;
+  z-index: 1000;
 
-    font-weight: 700;
-
-    font-size: 1.4rem;
-
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
-
-    margin: 10px 0;
+  font-size: 22px; /* ⬆️ slightly larger overall text */
 
 }
 
+ 
 
-/* Highlight the latest (active) round visually */
+#importModal .modal-content {
 
-    /* ✅ Latest (active) round - crisp and bright */
+  background: white;
+
+  color: black;
+
+  max-width: 500px; /* ⬆️ a bit wider for larger text */
+
+  margin: 100px auto;
+
+  padding: 24px; /* ⬆️ extra padding for balance */
+
+  border-radius: 12px;
+
+  display: flex;
+
+  flex-direction: column;
+
+  justify-content: center;
+
+  font-size: 22px; /* ⬆️ ensure all inner text inherits */
+
+}
+
+ 
+
+#importModal textarea {
+
+  width: 100%;
+
+  box-sizing: border-box;
+
+  margin-bottom: 18px;
+
+  padding: 10px 12px; /* ⬆️ more space inside */
+
+  border-radius: 8px;
+
+  resize: vertical;
+
+  font-size: 20px; /* ⬆️ bigger typing area text */
+
+}
+
+ 
+
+.modal-buttons {
+
+  display: flex;
+
+  justify-content: flex-end;
+
+  gap: 12px;
+
+}
+
+ 
+
+.ok-btn,
+
+.cancel-btn {
+
+  font-size: 18px; /* ⬆️ larger button text */
+
+  font-weight: bold;
+
+  cursor: pointer;
+
+  padding: 10px 16px; /* ⬆️ larger click area */
+
+  border-radius: 8px;
+
+  border: none;
+
+  color: white;
+
+}
+
+ 
+
+.ok-btn {
+
+  background: #009c3c;
+
+}
+
+.ok-btn:hover {
+
+  background: #00b84d;
+
+}
+
+ 
+
+.cancel-btn {
+
+  background: #d11a2a;
+
+}
+
+.cancel-btn:hover {
+
+  background: #ff3b3b;
+
+}
+
+ 
+
+ 
+
+/* ✅ Latest (active) round - crisp and bright */
+
 .latest-round .match-card,
+
 .latest-round .rest-btn,
+
 .latest-round .Lplayer-btn,
+
 .latest-round .Rplayer-btn {
+
   filter: none;
+
   transform: scale(1.01);
+
   transition: all 0.3s ease;
+
 }
+
+ 
 
 /* ✅ Previous (played) rounds - greyed out and de-emphasized */
+
 .played-round .match-card,
+
 .played-round .rest-btn,
+
 .played-round .Lplayer-btn,
+
 .played-round .Rplayer-btn {
-  filter: grayscale(40%) opacity(0.7);
-  
+
+  filter: grayscale(40%) opacity(0.7); 
+
   transform: scale(1);
+
   border: 1px solid #999;
+
 }
+
+ 
 
 .Lplayer-btn.selected,
+
 .Rplayer-btn.selected,
+
 .rest-btn.selected {
+
   outline: 2px solid #4caf50;
-  background: grey !important;
+
+  background: #4caf50 !important;
+
   color: #fff;
+
   box-shadow: 0 0 10px #4caf50;
+
   animation: borderPulse 1s ease-in-out infinite;
+
 }
+
+ 
 
 @keyframes borderPulse {
+
   0% {
+
     box-shadow: 0 0 4px #4caf50, 0 0 8px #4caf50;
+
     outline-color: #4caf50;
+
   }
+
   50% {
+
     box-shadow: 0 0 16px #4caf50, 0 0 24px #4caf50;
+
     outline-color: #6fff6f;
+
   }
+
   100% {
+
     box-shadow: 0 0 4px #4caf50, 0 0 8px #4caf50;
+
     outline-color: #4caf50;
+
   }
+
 }
 
-
+ 
 
 </style>
+
+
+
 
 </head>
 
@@ -673,10 +674,22 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
         </div>
 
-        <!-- Go to Rounds -->
+       <!-- Go to Rounds -->
 
-        <button id="goToRoundsBtn" class="main-action" onclick="goToRounds()">Go to Rounds ➡️</button>
+        <div class="card">               
 
+                     <div class="card-col">                    
+
+                  <button id="goToRoundsBtn" class="main-action" onclick="goToRounds()">Reset Rounds ➡️</button>
+
+                                   <button id="goToRoundsBtn" class="main-action" onclick="goToRounds()">Continue Rounds ➡️</button>                    
+
+                     </div>
+
+           </div>
+
+ 
+        
     </div>
 
 </div>
