--- a/testalpha1.html
+++ b/testalpha1.html
@@ -30,12 +30,13 @@ body {
     text-align: center;
 
     overflow-x: hidden;
+    
 
 }
 
  
 
-.container { margin: auto; padding: 8px; }
+.container { border: 2px; margin: auto; padding: 8px; }
 
 .card,
 
