--- a/testalpha1.html
+++ b/testalpha1.html
@@ -36,7 +36,11 @@ body {
 
  
 
-.container { border: 2px; margin: auto; padding: 8px; }
+.container {
+  border: 2px solid black;
+  margin: auto;
+  padding: 8px;
+}
 
 .card,
 
