--- a/testalpha1.html
+++ b/testalpha1.html
@@ -40,6 +40,7 @@ body {
   border: 2px solid white;
   margin: auto;
   padding: 8px;
+  border-radius: 25px;
 }
 
 .card,
@@ -702,6 +703,7 @@ body {
 <!-- Page 2 -->
 
 <div id="page2" style="display:none;">
+    <div class="container">
 
     <header>
 
@@ -722,6 +724,7 @@ body {
     <button class="main-action" onclick="goBack()">Back</button>
 
 </div>
+    </div>
 
 <script>
 
