--- a/testalpha1.html
+++ b/testalpha1.html
@@ -642,7 +642,7 @@
       <!-- Go to Rounds -->
       <div class="card-col">
         <button id="resetRoundsBtn" class="main-action" onclick="goToRounds()">New Rounds ➡️</button>
-        <button id="goToRoundsBtn" class="main-action" onclick="goToRounds()">Continue Rounds ➡️</button>
+        <button id="goToRoundsBtn" class="main-action" onclick="goToRounds()">Continue ➡️</button>
       </div>
       
 
