--- a/testalpha1.html
+++ b/testalpha1.html
@@ -641,7 +641,7 @@
 
       <!-- Go to Rounds -->
       <div class="card-col">
-        <button id="resetRoundsBtn" class="main-action" onclick="allRounds[]; "goToRounds()">New Rounds ➡️</button>
+        <button id="resetRoundsBtn" class="main-action" onclick="allRounds=[]; "goToRounds()">New Rounds ➡️</button>
         <button id="goToRoundsBtn" class="main-action" onclick="goToRounds()">Continue ➡️</button>
       </div>
       
