--- a/testalpha1.html
+++ b/testalpha1.html
@@ -2076,6 +2076,8 @@ button:disabled {
   // 1️⃣ Clear all previous rounds
   allRounds.length = 0;
   goToRounds()
+  const btn = document.getElementById('goToRoundsBtn');
+  btn.enabled;
 }
       
     function goToRounds() {
