--- a/testalpha1.html
+++ b/testalpha1.html
@@ -2181,6 +2181,9 @@ button:disabled {
 
         isOnPage2 = false;
 
+const btn = document.getElementById('goToRoundsBtn');
+  btn.enabled;
+        
       } else if (pin !== null) alert("Incorrect PIN!");
 
     }
