--- a/testalpha1.html
+++ b/testalpha1.html
@@ -2182,7 +2182,7 @@ button:disabled {
         isOnPage2 = false;
 
 const btn = document.getElementById('goToRoundsBtn');
-  btn.enabled;
+  btn.disabled = false;
         
       } else if (pin !== null) alert("Incorrect PIN!");
 
