--- a/testalpha1.html
+++ b/testalpha1.html
@@ -280,6 +280,7 @@
       background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
       min-height: 40vh;
       display: block;
+      margin: 12px;
 
     }
 
