--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -10,10 +10,9 @@
 
   <title>Badminton Pair-UP</title>
 
-  <style>
-    /* 📱 Base: Phone */
+  <style>/* Base font size: 16px = 1rem */
 html {
-  font-size: 16px; /* 1rem = 16px */
+  font-size: 16px;
 }
 
 body {
@@ -26,29 +25,29 @@ body {
 }
 
 header {
-  padding: 0.5rem;
+  padding: 0.5rem; /* 8px */
 }
 
 h1 {
   font-size: 1.25rem; /* 20px */
   margin: 0;
   font-weight: bold;
-  letter-spacing: 0.125rem;
+  letter-spacing: 0.125rem; /* 2px */
 }
 
 .container {
-  margin: 0.75rem;
-  padding: 0.5rem;
+  margin: 0.75rem; /* 12px */
+  padding: 0.5rem; /* 8px */
 }
 
 .card,
 .match-card {
   background: white;
   color: black;
-  padding: 0.75rem;
-  margin-bottom: 0.5rem;
-  border-radius: 0.75rem;
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3);
+  padding: 0.75rem; /* 12px */
+  margin-bottom: 0.5rem; /* 8px */
+  border-radius: 0.75rem; /* 12px */
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3); /* 4px 12px */
   max-width: 95vw;
   box-sizing: border-box;
 }
@@ -56,33 +55,33 @@ h1 {
 .rest-box {
   background: transparent !important;
   color: black;
-  padding: 0.5rem;
-  margin-bottom: 0.375rem;
-  border-radius: 0.75rem;
+  padding: 0.5rem; /* 8px */
+  margin-bottom: 0.375rem; /* 6px */
+  border-radius: 0.75rem; /* 12px */
   max-width: 95vw;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 0.375rem;
-  border: 0.0625rem solid #999;
+  gap: 0.375rem; /* 6px */
+  border: 0.0625rem solid #999; /* 1px */
 }
 
 .card input,
 .card select,
 .card button {
   width: 100%;
-  padding: 0.5rem;
-  margin: 0.5rem 0;
+  padding: 0.5rem; /* 8px */
+  margin: 0.5rem 0; /* 8px 0 */
   font-size: 1rem; /* 16px */
-  border-radius: 0.375rem;
+  border-radius: 0.375rem; /* 6px */
   box-sizing: border-box;
 }
 
 .card input,
 .card select {
-  border: 0.0625rem solid #ccc;
+  border: 0.0625rem solid #ccc; /* 1px */
 }
 
 .card button {
@@ -102,13 +101,13 @@ h1 {
 #player-list-table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 0.125rem;
+  margin-top: 0.125rem; /* 2px */
 }
 
 #player-list-table th,
 #player-list-table td {
-  border: 0.0625rem solid #ccc;
-  padding: 0.375rem;
+  border: 0.0625rem solid #ccc; /* 1px */
+  padding: 0.375rem; /* 6px */
   text-align: center;
   font-size: 0.875rem; /* 14px */
 }
@@ -130,15 +129,15 @@ h1 {
 }
 
 .fixed-pairs-list {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem; /* 8px */
 }
 
 .fixed-pair-item {
   background: #eee;
   color: black;
-  padding: 0.375rem 0.5rem;
-  border-radius: 0.375rem;
-  margin: 0.3125rem 0;
+  padding: 0.375rem 0.5rem; /* 6px 8px */
+  border-radius: 0.375rem; /* 6px */
+  margin: 0.3125rem 0; /* 5px 0 */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -147,7 +146,7 @@ h1 {
 .fixed-pair-remove {
   color: #d11a2a;
   cursor: pointer;
-  margin-left: 0.5rem;
+  margin-left: 0.5rem; /* 8px */
 }
 
 .fixed-pair-remove:hover {
@@ -170,9 +169,9 @@ h1 {
   background: white;
   color: black;
   max-width: 31.25rem; /* 500px */
-  margin: 6.25rem auto;
-  padding: 1.5rem;
-  border-radius: 0.75rem;
+  margin: 6.25rem auto; /* 100px */
+  padding: 1.5rem; /* 24px */
+  border-radius: 0.75rem; /* 12px */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -182,26 +181,26 @@ h1 {
 #importModal textarea {
   width: 100%;
   box-sizing: border-box;
-  margin-bottom: 1.125rem;
-  padding: 0.625rem 0.75rem;
-  border-radius: 0.5rem;
+  margin-bottom: 1.125rem; /* 18px */
+  padding: 0.625rem 0.75rem; /* 10px 12px */
+  border-radius: 0.5rem; /* 8px */
   resize: vertical;
-  font-size: 1.25rem;
+  font-size: 1.25rem; /* 20px */
 }
 
 .modal-buttons {
   display: flex;
   justify-content: flex-end;
-  gap: 0.75rem;
+  gap: 0.75rem; /* 12px */
 }
 
 .ok-btn,
 .cancel-btn {
-  font-size: 1.125rem;
+  font-size: 1.125rem; /* 18px */
   font-weight: bold;
   cursor: pointer;
-  padding: 0.625rem 1rem;
-  border-radius: 0.5rem;
+  padding: 0.625rem 1rem; /* 10px 16px */
+  border-radius: 0.5rem; /* 8px */
   border: none;
   color: white;
 }
@@ -223,12 +222,12 @@ h1 {
 }
 
 .gender-select {
-  margin: 0.625rem 0;
-  font-size: 1rem;
+  margin: 0.625rem 0; /* 10px */
+  font-size: 1rem; /* 16px */
 }
 
 .gender-select label {
-  margin-right: 0.9375rem;
+  margin-right: 0.9375rem; /* 15px */
 }
 
 .main-action {
@@ -236,11 +235,11 @@ h1 {
   width: 100%;
   background: orange;
   color: black;
-  font-size: 1.25rem;
+  font-size: 1.25rem; /* 20px */
   font-weight: bold;
-  padding: 0.5rem;
-  border-radius: 0.9375rem;
-  margin-top: 0.5rem;
+  padding: 0.5rem; /* 8px */
+  border-radius: 0.9375rem; /* 15px */
+  margin-top: 0.5rem; /* 8px */
   cursor: pointer;
   border: none;
   transition: background 0.3s, transform 0.2s;
@@ -251,45 +250,46 @@ h1 {
   transform: scale(1.05);
 }
 
-/* Everything else (gaps, buttons, round titles, etc.) also converted to rems */
+/* Flex containers */
 .card-col {
   display: flex;
   flex-direction: row;
   align-items: center; 
-  gap: 1.25rem;
+  gap: 1.25rem; /* 20px */
+  flex-wrap: nowrap; /* prevent wrapping on scaling */
 }
 
 #game-results {
-  display: block;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.25rem;
-  padding: 0.75rem;
+  gap: 1.25rem; /* 20px */
+  padding: 0.75rem; /* 12px */
   background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
   min-height: 40vh;
-  margin: 0.75rem;
+  margin: 0.75rem; /* 12px */
 }
 
 .match-card h3 {
-  font-size: 1.375rem;
+  font-size: 1.375rem; /* 22px */
   margin: 0;
 }
 
 .vs-text {
-  font-size: 1.25rem;
+  font-size: 1.25rem; /* 20px */
   font-weight: bold;
   color: #3b0073;
   flex: 0 0 auto;
-  margin: 0 0.5rem;
+  margin: 0 0.5rem; /* 8px */
 }
 
 .Lplayer-btn,
 .Rplayer-btn {
   border: none;
-  border-radius: 0.375rem;
-  font-size: 1.75rem;
-  padding: 0.625rem;
-  margin: 0.25rem 0;
+  border-radius: 0.375rem; /* 6px */
+  font-size: 1.75rem; /* 28px */
+  padding: 0.625rem; /* 10px */
+  margin: 0.25rem 0; /* 4px */
   color: #fff;
   text-align: center;
   transition: transform 0.2s, background 0.2s;
@@ -315,48 +315,48 @@ h1 {
 }
 
 .match-time {
-  font-size: 1rem;
+  font-size: 1rem; /* 16px */
   color: #3b0073;
   font-weight: 600;
-  margin-top: 0.25rem;
+  margin-top: 0.25rem; /* 4px */
 }
 
 .round-navigation {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
-  margin-top: 1.25rem;
-  padding: 0.5rem 1rem;
+  gap: 1rem; /* 16px */
+  margin-top: 1.25rem; /* 20px */
+  padding: 0.5rem 1rem; /* 8px 16px */
   background: linear-gradient(135deg, #2a2a72, #009ffd);
-  border-radius: 0.75rem;
+  border-radius: 0.75rem; /* 12px */
   box-shadow: 0 0.1875rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 
 .round-navigation .round-label {
   color: #fff;
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 1.2rem; /* 19.2px */
 }
 
 .round-navigation button {
   background: #fff;
   border: none;
-  padding: 0.5rem 1rem;
-  font-size: 1.2rem;
+  padding: 0.5rem 1rem; /* 8px 16px */
+  font-size: 1.2rem; /* 19.2px */
   font-weight: 600;
-  border-radius: 0.5rem;
+  border-radius: 0.5rem; /* 8px */
   cursor: pointer;
   transition: all 0.25s ease;
-  min-width: 3.125rem;
+  min-width: 3.125rem; /* 50px */
 }
 
 .rest-btn {
   border: none;
-  border-radius: 0.375rem;
-  font-size: 1rem;
-  padding: 0.375rem;
-  margin: 0.25rem 0;
+  border-radius: 0.375rem; /* 6px */
+  font-size: 1rem; /* 16px */
+  padding: 0.375rem; /* 6px */
+  margin: 0.25rem 0; /* 4px */
   color: #fff;
   text-align: center;
   transition: transform 0.2s, background 0.2s;
@@ -366,13 +366,18 @@ h1 {
   display: inline-block;
   background: #007BFF;
   color: white;
-  padding: 0.5rem 1.25rem;
-  border-radius: 0.875rem;
+  padding: 0.5rem 1.25rem; /* 8px 20px */
+  border-radius: 0.875rem; /* 14px */
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 1.4rem; /* 22.4px */
   box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.25);
-  margin: 0.625rem 0;
+  margin: 0.625rem 0; /* 10px */
 }
+
+/* Optional: tablet scaling (can add later) */
+/* @media (min-width: 768px) and (max-width: 1024px) {
+  html { font-size: 18.4px; }
+} */
 
   </style>
 
