--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -11,6 +11,7 @@
   <title>Badminton Pair-UP</title>
 
   <style>/* Base font size: 16px = 1rem */
+/* ===== Base font size: 16px = 1rem ===== */
 html {
   font-size: 16px;
 }
@@ -47,7 +48,7 @@ h1 {
   padding: 0.75rem; /* 12px */
   margin-bottom: 0.5rem; /* 8px */
   border-radius: 0.75rem; /* 12px */
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3); /* 4px 12px */
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3);
   max-width: 95vw;
   box-sizing: border-box;
 }
@@ -81,7 +82,7 @@ h1 {
 
 .card input,
 .card select {
-  border: 0.0625rem solid #ccc; /* 1px */
+  border: 0.0625rem solid #ccc;
 }
 
 .card button {
@@ -106,7 +107,7 @@ h1 {
 
 #player-list-table th,
 #player-list-table td {
-  border: 0.0625rem solid #ccc; /* 1px */
+  border: 0.0625rem solid #ccc;
   padding: 0.375rem; /* 6px */
   text-align: center;
   font-size: 0.875rem; /* 14px */
@@ -250,13 +251,12 @@ h1 {
   transform: scale(1.05);
 }
 
-/* Flex containers */
 .card-col {
   display: flex;
   flex-direction: row;
-  align-items: center; 
+  align-items: center;
   gap: 1.25rem; /* 20px */
-  flex-wrap: nowrap; /* prevent wrapping on scaling */
+  flex-wrap: nowrap;
 }
 
 #game-results {
@@ -273,6 +273,20 @@ h1 {
 .match-card h3 {
   font-size: 1.375rem; /* 22px */
   margin: 0;
+}
+
+.teams {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem; /* 8px */
+}
+
+.team {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-width: 7.5rem; /* 120px */
 }
 
 .vs-text {
@@ -336,48 +350,13 @@ h1 {
 .round-navigation .round-label {
   color: #fff;
   font-weight: 600;
-  font-size: 1.2rem; /* 19.2px */
+  font-size: 1.2rem;
 }
 
 .round-navigation button {
   background: #fff;
   border: none;
-  padding: 0.5rem 1rem; /* 8px 16px */
-  font-size: 1.2rem; /* 19.2px */
-  font-weight: 600;
-  border-radius: 0.5rem; /* 8px */
-  cursor: pointer;
-  transition: all 0.25s ease;
-  min-width: 3.125rem; /* 50px */
-}
-
-.rest-btn {
-  border: none;
-  border-radius: 0.375rem; /* 6px */
-  font-size: 1rem; /* 16px */
-  padding: 0.375rem; /* 6px */
-  margin: 0.25rem 0; /* 4px */
-  color: #fff;
-  text-align: center;
-  transition: transform 0.2s, background 0.2s;
-}
-
-.round-title {
-  display: inline-block;
-  background: #007BFF;
-  color: white;
-  padding: 0.5rem 1.25rem; /* 8px 20px */
-  border-radius: 0.875rem; /* 14px */
-  font-weight: 700;
-  font-size: 1.4rem; /* 22.4px */
-  box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.25);
-  margin: 0.625rem 0; /* 10px */
-}
-
-/* Optional: tablet scaling (can add later) */
-/* @media (min-width: 768px) and (max-width: 1024px) {
-  html { font-size: 18.4px; }
-} */
+  padding:
 
   </style>
 
