--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -301,7 +301,7 @@ h1 {
 .Lplayer-btn,
 .Rplayer-btn {
   border: none;
-  border-radius: 0.375rem; /* 6px */
+  border-radius: 0.5em; /* 6px */
   font-size: 1.75rem; /* 28px */
   padding: 0.625rem; /* 10px */
   margin: 0.25rem 0; /* 4px */
@@ -383,7 +383,7 @@ h1 {
 .rest-btn {
   border: none;
   border-radius: 0.375rem; /* 6px */
-  font-size: 1rem; /* 16px */
+  font-size: 1.25rem; /* 16px */
   padding: 0.375rem; /* 6px */
   margin: 0.25rem 0; /* 4px 0 */
   color: #fff;
