--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -280,7 +280,8 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 0.5rem; /* 8px */
+  gap: 0.5rem; 
+  display: block;/* 8px */
 }
 
 .team {
