--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -268,7 +268,8 @@ h1 {
   padding: 0.75rem; /* 12px */
   background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
   min-height: 40vh;
-  margin: 0.75rem; /* 12px */
+  margin: 0.75rem;
+  display: block;/* 12px */
 }
 
 .match-card h3 {
@@ -281,7 +282,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   gap: 0.5rem; 
-  display: block;/* 8px */
+  /* 8px */
 }
 
 .team {
