--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -261,7 +261,7 @@ h1 {
 }
 
 #game-results {
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center; /* centers the cards horizontally */
   gap: 2rem; /* spacing between cards */
@@ -270,12 +270,10 @@ h1 {
   min-height: 40vh;
   margin: 1.5rem;
   box-sizing: border-box;
+  
   width: 100%; /* ensures container fills device width */
 }
 
-#game-results .card {
-  width: 100%; /* full width */
-}
 
 .match-card h3 {
   font-size: 1.375rem; /* 22px */
