--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -261,17 +261,8 @@ h1 {
 }
 
 #game-results {
-  display: block;
-  flex-direction: column;
-  align-items: center; /* centers the cards horizontally */
-  gap: 2rem; /* spacing between cards */
-  padding: 1rem;
-  background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
-  min-height: 40vh;
-  margin: 1.5rem;
-  box-sizing: border-box;
-  
-  width: 100%; /* ensures container fills device width */
+  margin: 0.75rem; /* 12px */
+  padding: 0.5rem; /* 8px */
 }
 
 
