--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -42,7 +42,17 @@ h1 {
   padding: 0.5rem; /* 8px */
 }
 
-.card,
+.card {
+  background: white;
+  color: black;
+  padding: 1rem; /* 12px */
+  margin-bottom: 0.5rem; /* 8px */
+  border-radius: 0.75rem; /* 12px */
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3);
+  max-width: 95vw;
+  box-sizing: border-box;
+}
+
 .match-card {
   background: white;
   color: black;
