--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -591,14 +591,38 @@ button:disabled {
   flex-direction: column;
   flex: 1;
 }
-    
+
+/* Common responsive wrapper for phone + tablet */
+.responsive-container {
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0.75rem;
+  font-size: 1rem; /* base for phones */
+}
+
+/* For tablets — scale up font, spacing, etc. */
+@media (min-width: 768px) {
+  .responsive-container {
+    font-size: 1.125rem; /* 18px roughly */
+    padding: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .responsive-container {
+    font-size: 1.25rem; /* slightly larger for big tablets */
+    padding: 1.25rem;
+  }
+}
 
   </style>
 
 </head>
 
 <body onload="initPage()">
-
+ <div class="responsive-container">
   <!-- Page 1 -->
 
   <div id="page1">
@@ -2359,7 +2383,7 @@ const btn = document.getElementById('goToRoundsBtn');
 
 
 
-
+ </div>
 </body>
 
 </html>
