Implement responsive adjustments for small screens
Added responsive styles for small phones to adjust font size, padding, and button scaling.

--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -617,6 +617,31 @@ button:disabled {
   }
 }
 
+/* ===== Responsive adjustment for small phones ===== */
+@media (max-width: 767px) {
+  .responsive-container {
+    font-size: 0.875rem; /* shrink everything ~12.5% */
+    padding: 0.5rem;
+  }
+
+  body, input, button, select, textarea {
+    font-size: 0.875rem; /* shrink text */
+  }
+
+  .main-action,
+  .card button,
+  .Lplayer-btn,
+  .Rplayer-btn,
+  .rest-btn {
+    transform: scale(0.9); /* slightly smaller buttons */
+  }
+
+  h1 {
+    font-size: 1.1rem; /* reduce large headers */
+  }
+}
+
+  
   </style>
 
 </head>
