--- a/BSTabalpha1.html
+++ b/BSTabalpha1.html
@@ -592,55 +592,31 @@ button:disabled {
   flex: 1;
 }
 
-/* Common responsive wrapper for phone + tablet */
 .responsive-container {
   width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0.75rem;
-  font-size: 1rem; /* base for phones */
+  font-size: 1rem; /* iPad default */
 }
 
-/* For tablets — scale up font, spacing, etc. */
-@media (min-width: 768px) {
-  .responsive-container {
-    font-size: 1.125rem; /* 18px roughly */
-    padding: 1rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .responsive-container {
-    font-size: 1.25rem; /* slightly larger for big tablets */
-    padding: 1.25rem;
-  }
-}
-
-/* ===== Responsive adjustment for small phones ===== */
+/* Smaller screens (iPhone etc.) */
 @media (max-width: 767px) {
   .responsive-container {
-    font-size: 0.875rem; /* shrink everything ~12.5% */
+    font-size: 0.5rem; /* smaller text & layout */
     padding: 0.5rem;
   }
 
   body, input, button, select, textarea {
-    font-size: 0.875rem; /* shrink text */
-  }
-
-  .main-action,
-  .card button,
-  .Lplayer-btn,
-  .Rplayer-btn,
-  .rest-btn {
-    transform: scale(0.9); /* slightly smaller buttons */
+    font-size: 0.85rem;
   }
 
   h1 {
-    font-size: 1.1rem; /* reduce large headers */
+    font-size: 1.1rem;
   }
 }
-
+/* Common responsive wrapper for phone + tablet */
   
   </style>
 
