Change button text from 'Paste' to 'Import'

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -480,7 +480,7 @@ button:disabled {
 
       <div class="card">
 
-        <button onclick="showImportModal()">Paste All Players</button>
+        <button onclick="showImportModal()">Import All Players</button>
 
       </div>
 
