--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -373,12 +373,28 @@ h1 {
   cursor: not-allowed;
 }
 
+.r.rest-box {
+  display: none; /* hidden when empty */
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.5rem; /* handles all spacing, both row + column */
+  padding: 0.5rem;
+  box-sizing: border-box;
+  border-radius: 0.375rem;
+  min-height: 5rem;
+}
+
+.rest-box:not(:empty) {
+  display: flex;
+}
+
 .rest-btn {
   border: none;
   border-radius: 0.375rem;
   font-size: 1rem;
-  padding: 0.375rem; /* 6px */
-  margin: 0.25rem 0;
+  padding: 0.375rem 0.75rem;
+  margin: 0; /* ✅ remove margin to prevent double spacing */
   color: #fff;
   text-align: center;
   transition: transform 0.2s, background 0.2s;
@@ -387,27 +403,6 @@ h1 {
 .rest-btn:hover {
   transform: scale(1.05);
   opacity: 0.9;
-}
-
-.rest-box.drag-over {
-  outline: 0.1875rem dashed #ff9800; /* 3px */
-}
-
-.rest-box {
-  display: none; /* hidden by default */
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 0.5rem;
-  padding: 0.5rem;
-  box-sizing: border-box;
-  border-radius: 0.375rem;
-  min-height: 5rem; /* ensures space for ~2 rows when visible */
-}
-
-/* When it has at least one .rest-btn, show it */
-.rest-box:not(:empty) {
-  display: flex;
 }
 
 .round-title {
