Refactor round navigation buttons in HTML

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -576,20 +576,12 @@ button:disabled {
   <!-- Page 2 -->
 
   <div id="page2" style="display:none;">
-
-    <header>
-
-      <h4 id="roundTitle">Championship</h4>
-
-    </header>
-
     <div id="game-results"></div>
-
-    <div class="round-navigation">
-
-      <button id="prevBtn" onclick="prevRound()" disabled>Prev Round</button>
-
-      <button id="nextBtn" onclick="nextRound()" disabled>NextRound</button>
+       <div class="round-navigation">
+         <button id="prevBtn" onclick="prevRound()" disabled>Prev Round</button>
+         <button id="roundTitle"</button>
+         
+         <button id="nextBtn" onclick="nextRound()" disabled>NextRound</button>
 
     </div>
 
