--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -421,7 +421,7 @@ h1 {
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 50%;
-  background-color: #6200ea;
+  background-color: #FFD700;
   color: #fff;
   font-size: 1.25rem;
   display: flex;
