--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -409,12 +409,12 @@ h1 {
   display: inline-block;
   background: #007BFF;
   color: white;
-  padding: 0.5rem 1.25rem; /* 8px 20px */
+  padding: 0rem 0rem; /* 8px 20px */
   border-radius: 0.875rem; /* 14px */
   font-weight: 700;
   font-size: 1.4rem;
   box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.25);
-  margin: 0.625rem 0; /* 10px */
+  margin: 0rem 0; /* 10px */
 }
 
   #roundTitle {
@@ -422,7 +422,7 @@ h1 {
   height: 1.5rem;
   border-radius: 50%;
   background-color: #FFD700;
-  color: #fff;
+  color: black;
   font-size: 1.25rem;
   display: flex;
   justify-content: center;
