Delete .round-title CSS styles
Removed styling for .round-title class.

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -405,18 +405,6 @@ h1 {
   opacity: 0.9;
 }
 
-.round-title {
-  display: inline-block;
-  background: #007BFF;
-  color: white;
-  padding: 0rem 0rem; /* 8px 20px */
-  border-radius: 0.875rem; /* 14px */
-  font-weight: 700;
-  font-size: 1.4rem;
-  box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.25);
-  margin: 0rem 0; /* 10px */
-}
-
   #roundTitle {
   width: 1.5rem;
   height: 1.5rem;
@@ -428,6 +416,7 @@ h1 {
   justify-content: center;
   align-items: center;
   user-select: none;
+    padding: 0.625rem
 }
 
 /* ✅ Round status visuals */
