Change button text from 'Import' to 'OK'

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -509,7 +509,7 @@ button:disabled {
     </div>
 
     <div class="modal-buttons">
-      <button class="ok-btn" onclick="addPlayersFromText()">Import</button>
+      <button class="ok-btn" onclick="addPlayersFromText()">OK</button>
       <button class="cancel-btn" onclick="hideImportModal()">Cancel</button>
     </div>
   </div>
