Add 'Back to Input' button to page 2

--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -578,6 +578,7 @@ button:disabled {
   <!-- Page 2 -->
 
   <div id="page2" style="display:none;">
+    <button class="main-action" onclick="goBack()">Back to Input</button>
     <div id="game-results"></div>
        <div class="round-navigation">
          <button id="prevBtn" onclick="prevRound()" disabled>Prev Round</button>
@@ -587,7 +588,7 @@ button:disabled {
 
     </div>
 
-    <button class="main-action" onclick="goBack()">Back</button>
+    
 
   </div>
 
